--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,8 @@
         <p class="power">
             <span>
                 Site powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://pages.github.com/">Github Pages</a>.
+              theme来自 <a href="https://github.com/yanys-github">yanys-github</a>
+
             </span>
             
         </p>
